# llm-evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  demo_evaluate.py.py  pyproject.toml  ttt_results.py
configuration/: __init__.py  global_config.py
core/: evaluater.py
core/flows/: evaluation.py
core/tasks/: evaluation.py
models/: evaluation.py  metric.py
tests/: conftest.py  test_evaluation_flow.py
utils/: preprocessing.py
